--- a/day1/task2.html
+++ b/day1/task2.html
@@ -6,10 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-
-
-    <a href="./day1/day1.html">day 1 tasks</a>
-
-    <a href="./day2/day2.html">day 2 taksks</a>
+    <h1>task 2</h1>
 </body>
 </html>
