--- a/day1/day1.html
+++ b/day1/day1.html
@@ -6,10 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-
-
-    <a href="./day1/day1.html">day 1 tasks</a>
-
-    <a href="./day2/day2.html">day 2 taksks</a>
+   <a href="./task1.html">day 1 task 1</a><br>
+   <a href="./task2.html">day 1 task 2</a>
 </body>
 </html>
