--- a/day1/task1.html
+++ b/day1/task1.html
@@ -7,9 +7,7 @@
 </head>
 <body>
 
-
-    <a href="./day1/day1.html">day 1 tasks</a>
-
-    <a href="./day2/day2.html">day 2 taksks</a>
+    <h1>task 1</h1>
+    
 </body>
 </html>
