--- a/day2/day2.html
+++ b/day2/day2.html
@@ -6,10 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-
-
-    <a href="./day1/day1.html">day 1 tasks</a>
-
-    <a href="./day2/day2.html">day 2 taksks</a>
+    <a href="./task1.html">day 2 task 1</a>
+    <a href="">day 2 task 1</a>
+    <a href="">day 2 task 1</a>
+    
 </body>
 </html>
